--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Uzay Oyunu</title>
+<title>YILDIZ Oyunu</title>
 
 <style>
-/* ==== RESET & ARKA PLAN ==== */
+/* ================= GENEL ================= */
 html,body{
   margin:0;
   padding:0;
   width:100%;
   height:100%;
   overflow:hidden;
-  background:
-    radial-gradient(circle at top,#2a0a4a,#05010a);
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
+  background:
+    radial-gradient(circle at top,#2b0b4f,#05010a);
   touch-action:none;
 }
 
-/* Hafif yıldız dokusu */
+/* Uzay dokusu */
 body::before{
   content:"";
   position:fixed;
@@ -28,60 +28,64 @@ body::before{
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
-  opacity:.15;
+  opacity:.18;
   pointer-events:none;
 }
 
-/* ==== HUD ==== */
+/* ================= HUD ================= */
 #hud{
   position:fixed;
-  top:12px;
-  left:12px;
-  color:#fff;
+  top:14px;
+  left:14px;
+  color:white;
   font-size:18px;
-  z-index:10;
+  z-index:20;
 }
 #lives{margin-left:6px}
 
-/* ==== PANEL ==== */
+/* ================= PANEL ================= */
 #panel{
   position:fixed;
-  bottom:26px;
+  bottom:80px;              /* 🔧 KUTULARDAN YUKARIDA */
   left:50%;
   transform:translateX(-50%);
   width:60px;
   height:14px;
   border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
-  box-shadow:0 0 25px rgba(255,80,180,.9);
-  z-index:8;
+  box-shadow:0 0 30px rgba(255,80,180,.9);
+  z-index:15;
 }
 
-/* ==== HARF KUTULARI ==== */
+/* ================= HARF KUTULARI ================= */
 #letterBoxes{
   position:fixed;
-  bottom:24px;
+  bottom:20px;
   left:10px;
   display:flex;
   gap:6px;
-  z-index:9;
+  z-index:16;
 }
 .box{
-  width:30px;
-  height:30px;
-  border:2px solid rgba(255,255,255,.5);
-  color:#fff;
+  width:28px;
+  height:28px;
+  border-radius:6px;
+  background:rgba(255,255,255,.12);
+  backdrop-filter:blur(6px);
+  border:1px solid rgba(255,255,255,.5);
+  box-shadow:inset 0 0 8px rgba(255,255,255,.4);
+  color:white;
   display:flex;
   align-items:center;
   justify-content:center;
   font-weight:bold;
-  font-size:15px;
+  font-size:14px;
 }
 .box.filled{
-  background:rgba(255,255,255,.15);
+  background:rgba(255,255,255,.22);
 }
 
-/* ==== DÜŞEN NESNELER ==== */
+/* ================= DÜŞEN NESNELER ================= */
 .item{
   position:absolute;
   top:-80px;
@@ -102,7 +106,7 @@ body::before{
 
 /* KALP */
 .heart{
-  width:20px;height:20px;
+  width:22px;height:22px;
   background:#ff4d6d;
   transform:rotate(-45deg);
   border-radius:50% 50% 0 0;
@@ -110,39 +114,39 @@ body::before{
 .heart::before,.heart::after{
   content:"";
   position:absolute;
-  width:20px;height:20px;
+  width:22px;height:22px;
   background:#ff4d6d;
   border-radius:50%;
 }
-.heart::before{top:-10px}
-.heart::after{left:10px}
+.heart::before{top:-11px}
+.heart::after{left:11px}
 
 /* METEOR */
 .meteor{
   width:16px;height:16px;
   border-radius:50%;
   background:radial-gradient(circle,#ffb74d,#e65100);
-  box-shadow:0 0 25px rgba(255,140,0,.9);
+  box-shadow:0 0 28px rgba(255,140,0,.9);
 }
 .meteor::after{
   content:"";
   position:absolute;
-  top:-45px;
+  top:-50px;
   left:50%;
   transform:translateX(-50%);
-  width:6px;height:45px;
+  width:6px;height:50px;
   background:linear-gradient(to top,rgba(255,140,0,.8),transparent);
 }
 
 /* HARF */
 .letter{
-  color:#fff;
+  color:white;
   font-size:20px;
   font-weight:bold;
-  text-shadow:0 0 10px rgba(255,255,255,.6);
+  text-shadow:0 0 10px rgba(255,255,255,.7);
 }
 
-/* GAME OVER */
+/* ================= GAME OVER ================= */
 #over{
   display:none;
   position:fixed;
@@ -150,7 +154,7 @@ body::before{
   background:rgba(0,0,0,.75);
   color:white;
   font-size:32px;
-  z-index:20;
+  z-index:30;
   align-items:center;
   justify-content:center;
   flex-direction:column;
@@ -166,6 +170,7 @@ body::before{
 }
 </style>
 </head>
+
 <body>
 
 <div id="hud">
@@ -182,7 +187,7 @@ body::before{
 </div>
 
 <script>
-/* ==== OYUN DEĞİŞKENLERİ ==== */
+/* ================= OYUN DURUMU ================= */
 let score=0;
 let lives=3;
 let running=true;
@@ -192,14 +197,14 @@ const filled=new Set();
 const active=new Set();
 const items=[];
 
-/* ==== ELEMENTLER ==== */
+/* ================= ELEMENTLER ================= */
 const panel=document.getElementById("panel");
 const scoreEl=document.getElementById("score");
 const livesEl=document.getElementById("lives");
 const over=document.getElementById("over");
 const boxes=document.getElementById("letterBoxes");
 
-/* ==== KUTULAR ==== */
+/* ================= KUTULAR ================= */
 letters.forEach(l=>{
   const b=document.createElement("div");
   b.className="box";
@@ -207,8 +212,9 @@ letters.forEach(l=>{
   boxes.appendChild(b);
 });
 
-/* ==== PANEL HAREKET ==== */
+/* ================= PANEL HAREKET ================= */
 let dragging=false;
+
 panel.addEventListener("touchstart",()=>dragging=true);
 window.addEventListener("touchend",()=>dragging=false);
 window.addEventListener("touchmove",e=>{
@@ -218,7 +224,7 @@ window.addEventListener("touchmove",e=>{
   panel.style.left=x+"px";
 });
 
-/* ==== YARDIMCI ==== */
+/* ================= YARDIMCI ================= */
 function updateLives(){
   livesEl.textContent="❤️".repeat(lives);
 }
@@ -226,13 +232,14 @@ function collide(a,b){
   return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
 }
 
-/* ==== SPAWN ==== */
+/* ================= SPAWN ================= */
 function spawn(type){
   if(type==="letter"){
     const pool=letters.filter(l=>!filled.has(l)&&!active.has(l));
     if(!pool.length) return;
     const l=pool[Math.floor(Math.random()*pool.length)];
     active.add(l);
+
     const el=document.createElement("div");
     el.className="item letter";
     el.textContent=l;
@@ -240,21 +247,24 @@ function spawn(type){
     el.y=-40;
     el.x=Math.random()*(innerWidth-40);
     el.style.left=el.x+"px";
+
     document.body.appendChild(el);
     items.push({el,type});
     return;
   }
+
   const el=document.createElement("div");
   el.className="item "+type;
   el.y=-60;
   el.x=Math.random()*(innerWidth-40);
   el.speed=(type==="meteor"?3:2);
   el.style.left=el.x+"px";
+
   document.body.appendChild(el);
   items.push({el,type});
 }
 
-/* ==== OYUN DÖNGÜ ==== */
+/* ================= OYUN DÖNGÜ ================= */
 function loop(){
   if(!running) return;
   const pRect=panel.getBoundingClientRect();
@@ -272,13 +282,17 @@ function loop(){
       if(o.type==="letter"){
         filled.add(o.el.letter);
         active.delete(o.el.letter);
-        document.querySelector(`[data-letter="${o.el.letter}"]`)
-          .classList.add("filled");
+        const box=document.querySelector(`[data-letter="${o.el.letter}"]`);
+        box.textContent=o.el.letter;   /* 🔧 HARF NET GÖRÜNÜR */
+        box.classList.add("filled");
       }
+
       scoreEl.textContent=score;
       updateLives();
+
       o.el.remove();
       items.splice(i,1);
+
       if(lives<=0){
         running=false;
         over.style.display="flex";
@@ -295,7 +309,7 @@ function loop(){
   requestAnimationFrame(loop);
 }
 
-/* ==== ZAMANLAYICILAR ==== */
+/* ================= ZAMANLAYICILAR ================= */
 setInterval(()=>spawn("star"),900);
 setInterval(()=>spawn("heart"),5200);
 setInterval(()=>spawn("meteor"),1200);
