--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 <style>
 html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
+  margin:0;padding:0;width:100%;height:100%;
   overflow:hidden;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   background:radial-gradient(circle at top,#2b0b4f,#05010a);
@@ -18,67 +15,51 @@ html,body{
 }
 body::before{
   content:"";
-  position:fixed;
-  inset:0;
+  position:fixed;inset:0;
   background-image:
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
-  opacity:.18;
-  pointer-events:none;
+  opacity:.18;pointer-events:none;
 }
+
+/* HUD */
 #hud{
-  position:fixed;
-  top:14px;
-  left:14px;
-  color:white;
-  font-size:18px;
-  z-index:20;
+  position:fixed;top:14px;left:14px;
+  color:white;font-size:18px;z-index:20;
 }
 #lives{margin-left:6px}
+
+/* PANEL */
 #panel{
-  position:fixed;
-  bottom:80px;
-  left:50%;
+  position:fixed;bottom:80px;left:50%;
   transform:translateX(-50%);
-  width:60px;
-  height:14px;
-  border-radius:20px;
+  width:60px;height:14px;border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
   box-shadow:0 0 30px rgba(255,80,180,.9);
   z-index:15;
 }
+
+/* HARF KUTULARI */
 #letterBoxes{
-  position:fixed;
-  bottom:20px;
-  left:10px;
-  display:flex;
-  gap:6px;
-  z-index:16;
+  position:fixed;bottom:20px;left:10px;
+  display:flex;gap:6px;z-index:16;
 }
 .box{
-  width:28px;
-  height:28px;
-  border-radius:6px;
+  width:28px;height:28px;border-radius:6px;
   background:rgba(255,255,255,.12);
   backdrop-filter:blur(6px);
   border:1px solid rgba(255,255,255,.5);
   box-shadow:inset 0 0 8px rgba(255,255,255,.4);
-  color:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  font-size:14px;
+  color:white;display:flex;
+  align-items:center;justify-content:center;
+  font-weight:bold;font-size:14px;
 }
-.box.filled{
-  background:rgba(255,255,255,.22);
-}
-.item{
-  position:absolute;
-  top:-80px;
-  pointer-events:none;
-}
+.box.filled{background:rgba(255,255,255,.22)}
+
+/* NESNELER */
+.item{position:absolute;top:-80px;pointer-events:none}
+
 .star{
   width:18px;height:18px;
   background:radial-gradient(circle,#ffe58a,#ffb300);
@@ -90,61 +71,58 @@ body::before{
   box-shadow:0 0 12px gold;
 }
 .heart{
-  width:22px;height:22px;
-  background:#ff4d6d;
+  width:22px;height:22px;background:#ff4d6d;
   transform:rotate(-45deg);
   border-radius:50% 50% 0 0;
 }
 .heart::before,.heart::after{
-  content:"";
-  position:absolute;
+  content:"";position:absolute;
   width:22px;height:22px;
-  background:#ff4d6d;
-  border-radius:50%;
+  background:#ff4d6d;border-radius:50%;
 }
 .heart::before{top:-11px}
 .heart::after{left:11px}
+
 .meteor{
-  width:16px;height:16px;
-  border-radius:50%;
+  width:16px;height:16px;border-radius:50%;
   background:radial-gradient(circle,#ffb74d,#e65100);
   box-shadow:0 0 28px rgba(255,140,0,.9);
 }
 .meteor::after{
-  content:"";
-  position:absolute;
-  top:-50px;
-  left:50%;
+  content:"";position:absolute;
+  top:-50px;left:50%;
   transform:translateX(-50%);
   width:6px;height:50px;
   background:linear-gradient(to top,rgba(255,140,0,.8),transparent);
 }
+
 .letter{
-  color:white;
-  font-size:20px;
-  font-weight:bold;
+  color:white;font-size:20px;font-weight:bold;
   text-shadow:0 0 10px rgba(255,255,255,.7);
 }
+
+/* SOFT FINAL */
+#softWin{
+  position:fixed;inset:0;
+  display:none;align-items:center;justify-content:center;
+  font-size:28px;color:white;
+  background:rgba(0,0,0,.35);
+  backdrop-filter:blur(4px);
+  z-index:25;
+}
+
+/* GAME OVER */
 #over{
-  display:none;
-  position:fixed;
-  inset:0;
+  display:none;position:fixed;inset:0;
   background:rgba(0,0,0,.75);
-  color:white;
-  font-size:32px;
-  z-index:30;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
+  color:white;font-size:32px;
+  z-index:30;align-items:center;
+  justify-content:center;flex-direction:column;
 }
 #over button{
-  margin-top:15px;
-  padding:10px 22px;
-  border:none;
-  border-radius:14px;
-  background:#ff4d6d;
-  color:white;
-  font-size:18px;
+  margin-top:15px;padding:10px 22px;
+  border:none;border-radius:14px;
+  background:#ff4d6d;color:white;font-size:18px;
 }
 </style>
 </head>
@@ -159,6 +137,8 @@ body::before{
 <div id="letterBoxes"></div>
 <div id="panel"></div>
 
+<div id="softWin">✨ YILDIZ tamamlandı ✨</div>
+
 <div id="over">
   Oyun Bitti
   <button onclick="location.reload()">Tekrar Oyna</button>
@@ -166,8 +146,9 @@ body::before{
 
 <script>
 let score=0,lives=3,running=true;
+let difficulty=1; // 🔥 ZORLUK ÇARPANI
 
-/* 🔧 I HARFİ 2 AYRI GÖREV */
+/* I HARFİ 2 KEZ */
 const letters=["Y","I1","L","D","I2","Z"];
 const displayMap={I1:"I",I2:"I"};
 
@@ -186,11 +167,10 @@ letters.forEach(l=>{
   const b=document.createElement("div");
   b.className="box";
   b.dataset.letter=l;
-  b.textContent=displayMap[l]||"";
   boxes.appendChild(b);
 });
 
-/* PANEL */
+/* PANEL (TOUCH) */
 let dragging=false;
 panel.addEventListener("touchstart",()=>dragging=true);
 window.addEventListener("touchend",()=>dragging=false);
@@ -201,9 +181,11 @@ window.addEventListener("touchmove",e=>{
   panel.style.left=x+"px";
 });
 
+/* YARDIMCI */
 function updateLives(){livesEl.textContent="❤️".repeat(lives)}
 function collide(a,b){return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom)}
 
+/* SPAWN */
 function spawn(type){
   if(type==="letter"){
     const pool=letters.filter(l=>!filled.has(l)&&!active.has(l));
@@ -222,24 +204,28 @@ function spawn(type){
     items.push({el,type});
     return;
   }
+
   const el=document.createElement("div");
   el.className="item "+type;
   el.y=-60;
   el.x=Math.random()*(innerWidth-40);
-  el.speed=(type==="meteor"?3:2);
+  el.speed=(type==="meteor"?3:2)*difficulty;
   el.style.left=el.x+"px";
   document.body.appendChild(el);
   items.push({el,type});
 }
 
+/* ANA DÖNGÜ */
 function loop(){
   if(!running)return;
   const p=panel.getBoundingClientRect();
+
   for(let i=items.length-1;i>=0;i--){
     const o=items[i];
-    o.el.y+=o.el.speed||2;
+    o.el.y+=o.el.speed||2*difficulty;
     o.el.style.top=o.el.y+"px";
     const r=o.el.getBoundingClientRect();
+
     if(collide(r,p)){
       if(o.type==="star")score+=10;
       if(o.type==="heart"&&lives<3)lives++;
@@ -250,24 +236,45 @@ function loop(){
         const box=document.querySelector(`[data-letter="${o.el.letter}"]`);
         box.textContent=displayMap[o.el.letter]||o.el.letter;
         box.classList.add("filled");
+
+        /* SOFT FİNAL */
+        if(filled.size===letters.length){
+          const win=document.getElementById("softWin");
+          win.style.display="flex";
+          setTimeout(()=>win.style.display="none",2000);
+        }
       }
+
       scoreEl.textContent=score;
       updateLives();
       o.el.remove();items.splice(i,1);
-      if(lives<=0){running=false;over.style.display="flex";}
+
+      if(lives<=0){
+        running=false;
+        over.style.display="flex";
+      }
     }
+
     if(o.el.y>innerHeight+60){
       if(o.type==="letter")active.delete(o.el.letter);
       o.el.remove();items.splice(i,1);
     }
   }
+
   requestAnimationFrame(loop);
 }
 
+/* 🔥 ZORLUK ZAMANLA ARTIYOR */
+setInterval(()=>{
+  difficulty+=0.05; // oyun sonuna doğru hızlanır
+},5000);
+
+/* ZAMANLAYICILAR */
 setInterval(()=>spawn("star"),900);
 setInterval(()=>spawn("heart"),5200);
 setInterval(()=>spawn("meteor"),1200);
 setInterval(()=>spawn("letter"),1800);
+
 loop();
 </script>
 </body>
